full-moon/tests/roblox_cases/fail/parser/named_function_arg_types/error_display.snap
---
source: full-moon/tests/fail_cases.rs
expression: "String::from_utf8(output.into_inner()).unwrap()"
---
error[ast]: expected `->` after `()` for function type
  ┌─ source.lua:1:27
  │
1 │ type Foo = (count: number)
  │                           ^


